<resources>
    <string name="app_name">eXistenZ Settings</string>
    <string name="existenz">eXistenZ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="tile_label">Quick Settings Sample</string>
    <string name="app_greeting">To open the notification shade, swipe down from the top of the phone.
        Expand the widget on the right side and then click <b>Edit</b>.
    </string>
    <string name="service_active">active</string>
    <string name="service_inactive">inactive</string>
    <string name="qs_dialog_tile_label">QS Dialog Launcher</string>
    <string name="qs_dialog_title">Quick Settings Dialog</string>
    <string name="qs_dialog_prompt">Change the tile state?</string>
    <string name="qs_dialog_active">Turn off</string>
    <string name="qs_dialog_inactive">Turn on</string>
    <string name="qs_dialog_cancel">Cancel</string>
    <string name="qs_intent_tile_label">eXistenZ Settings</string>
    <string name="result_label">eXistenZ Settings</string>
    <string name="result_output" formatted="false">The %s tile is %s.</string>
    <string name="result_return">Home</string>
    <string name="dialog_color_picker">Pick Color</string>
    <string name="press_color_to_apply">Press to apply</string>
    <string name="root_progress_dialog_title">Acquiring Root Access</string>
    <string name="root_progress_dialog_message">Please wait…</string>
    <string name="no_su_dialog_title">No root privileges</string>
    <string name="no_su_dialog_message">We could not acquire root access on your device.\n\nMost of this app\'s functions can be performed without root access. However, you might experience problems with running scripts or rebooting.\n\nWe strongly recommend to allow root access on next request or allow such access in your Su client manually.</string>
    <string name="no_su_dialog_dismiss_button_text">Whatever, man</string>
    <string name="command_executed_success_toast">Executed successfully</string>
    <string name="root_tools_exception_toast">File not found or root denied</string>
    <string name="reboot_menu">Reboot menu</string>
    <string name="reboot_device_text">Reboot Device</string>
    <string name="reboot_recovery_text">Reboot Recovery</string>
    <string name="reboot_ui_text">Reboot SystemUI</string>
    <string name="app_reboot_required_dialog_title">App reboot required</string>
    <string name="app_reboot_required_dialog_message">For this action to take effect it is required to restart %1$s.\n\nPress OK to restart now</string>
    <string name="theme_dialog_title">Choose theme</string>
    <string name="changelog_version_title">eXistenZ N version: %1$s</string>
    <string name="backup_restore_dialog_title">Backup/Restore Rom Control system data</string>
    <string name="choose_backup_dialog_title">Please choose backup to restore</string>
    <string name="no_backup_dialog_title">No backup found on this device</string>
    <string name="no_backup_dialog_message">Would you like to create new backup now?</string>
    <string name="restore_confirm_dialog_title">Please confirm restore</string>
    <string name="restore_confirm_message">You have chosen to restore data from previous Rom Control preferences.\n\n<b>Please note! This operation will change your device settings based on the settings stored in this file.\n\n<font fgcolor="red">DO NOT PROCEED unless absolutely sure!!!</font></b>\n\nRom Control will close to allow data restoration and reopen again upon its completion. Depending on the amount of your settings this may take some time.\n\nPlease click \"CONFIRM\" to proceed or \"CANCEL\" to quit.</string>
    <string name="notification_panel_category_title">Notification panel</string>
    <string name="navigation_bar_category_title">Navigation bar</string>
    <string name="volume_button_title">Volume buttons</string>
    <string name="quick_settings_category_title">Quick settings</string>
    <string name="quick_settings_color_title">Custom color switch</string>
    <string name="quick_settings_color_summary">Allow custom color or reset to default</string>
    <string name="quick_settings_panel_background_title">Panel background color</string>
    <string name="quick_settings_panel_transparency_title">Panel transparency</string>
    <string name="status_bar_expanded_qs_settings">Layout</string>
    <string name="qs_tile_layout_summary">Expand the quick settings layout as per your choice</string>
    <string name="qs_rows_portrait_title">Rows (portrait)</string>
    <string name="qs_rows_landscape_title">Rows (landscape)</string>
    <string name="qs_columns_title">Columns</string>
    <string name="qs_small_tiles_title">Small QS tiles</string>
    <string name="qs_tile_title_visibility_title">Tile titles</string>
    <string name="qs_tile_title_visibility_summary_on">Titles are now visible</string>
    <string name="qs_tile_title_visibility_summary_off">Titles are now gone</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching tiles</string>
    <string name="qs_block_on_secure_keyguard_title">Disable quick settings</string>
    <string name="qs_block_on_secure_keyguard_summary">Disables quick settings on secure lockscreen</string>
    <string name="qs_advanced_data_title">Data easy toggle</string>
    <string name="qs_advanced_data_summary">Enable one tap action to enable or disable data</string>
    <string name="qs_wifi_easy_toggle_title">WiFi easy toggle</string>
    <string name="qs_wifi_easy_toggle_summary">Makes it so one click will turn WiFi on or off instead of taking you to settings</string>
    <string name="qs_bt_easy_toggle_title">Bluetooth easy toggle</string>
    <string name="qs_bt_easy_toggle_summary">Makes it so one click will turn Bluetooth on or off instead of taking you to settings</string>
    <string name="qs_fancy_animation_title">Fancy animation</string>
    <string name="qs_fancy_animation_summary">Enable a different animation effect when pulling down the status bar</string>
    <string name="qs_brightness_title">Show brightness slider</string>
    <string name="qs_brightness_summary">Enable or disable the brightness slider</string>
    <string name="blur_settings_title">Blur settings</string>
    <string name="blur_settings_summary">Select blur radius and alpha values</string>
    <string name="blur_notification_panel_title">Blur notification panel</string>
    <string name="blur_notification_panel_summary">The notification panel background will be blurred</string>
    <string name="blur_radius">Blur radius</string>
    <string name="blur_alpha">Blur alpha</string>
    <string name="clock_date_category_title">Clock and date</string>
    <string name="clock_title_enable">Alignment</string>
    <string name="clock_status_bar_show_clock_title">Show clock and date</string>
    <string name="clock_status_bar_am_pm_title">AM/PM</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="network_traffic_show_network_traffic_state">Status bar traffic monitor</string>
    <string name="network_traffic_show_network_traffic_unit">Display unit</string>
    <string name="network_traffic_show_network_traffic_frequency">Update interval</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_color_style">Color style</string>
    <string name="lockscreen_clock_category_title">Clock</string>
    <string name="lockscreen_statusbar_category_title">Status bar</string>
    <string name="lockscreen_use_see_through_clock_title">See Trough Clock</string>
    <string name="lockscreen_use_see_through_clock_summary">Enable or disable the transparent lockscreen clock.</string>
    <string name="lockscreen_force_see_through_clock_title">Force See Trough Clock</string>
    <string name="lockscreen_force_see_through_clock_summary">Transparent clock while playing media or with custom wallpaper.</string>
    <string name="lockscreen_carrier_label_title">Display carrier label</string>
    <string name="lockscreen_carrier_label_summary">The carrier label will be displayed</string>
    <string name="lockscreen_statusbar_clock_title">Status bar Clock</string>
    <string name="lockscreen_statusbar_clock_summary">Add status bar clock</string>
    <string name="lockscreen_hide_clock_title">Clock and date</string>
    <string name="lockscreen_hide_clock_summary">Hide clock container</string>
    <string name="lockscreen_album_art_title">Full Screen Album Art</string>
    <string name="lockscreen_album_art_summary">Full Screen Album Art while music is playing</string>
    <string name="lockscreen_media_category">Medias</string>
    <string name="lockscreen_display_category">Display</string>
    <string name="lockscreen_charging_current_title">Lockscreen charging info</string>
    <string name="lockscreen_charging_current_summary">Display remaining charging time on lockscreen</string>
    <string name="lockscreen_aosp_clock_category">AOSP clock</string>
    <string name="lockscreen_aosp_clock_title">Show AOSP clock</string>
    <string name="lockscreen_aosp_clock_summary">AOSP clock will replace all Sony\'s clocks</string>
    <string name="lock_clock_font_title">Font options</string>
    <string name="lockdate_font_size_title">Date font size</string>
    <string name="lockclock_font_size_title">Clock font size</string>
    <string name="lock_date_font_title">Date</string>
    <string name="status_bar_carrier_font_style_title">Carrier Label Font</string>
    <string name="navigation_bar_arrow_keys_title">Show arrow keys while typing</string>
    <string name="navigation_bar_arrow_keys_summary">Display left and right cursor buttons while typing. Overrides IME switcher.</string>
    <string name="volume_rocker_music_control">Volume music control</string>
    <string name="volume_rocker_music_control_summary">Use volume rocker to skip tracks when screen off</string>
    <string name="dashboard_category">Dashboard options</string>
    <string name="remove_tile_summaries_title">Remove tile summaries</string>
    <string name="settings_drawer_title">Settings drawer</string>
    <string name="show_settings_drawer_title">Show settings drawer</string>
    <string name="show_settings_drawer_enabled">Settings drawer enabled</string>
    <string name="show_settings_drawer_disabled">Settings drawer disabled</string>
    <string name="heads_up_category_title">Heads up</string>
    <string name="heads_up_switch_title">Heads up</string>
    <string name="heads_up_switch_summary">Toogle Heads up globally</string>
    <string name="heads_up_time_out_title">Time out</string>
    <string name="heads_up_time_out_summary">Peeking notifications will show for setted seconds</string>
    <string name="heads_up_snooze_title">Snooze timer</string>
    <string name="heads_up_snooze_summary">Swiping up on peeking notifications will snooze heads up from that application for setted minutes</string>
    <string name="screenshot_type_title">Screenshot type</string>
    <string name="screenshot_options_category">Screenshot options</string>
    <string name="screenshot_sound_title">Screenshot sound</string>
    <string name="screenshot_delay_title">Screenshot delay</string>
    <string name="screenshot_crop_and_share_title">Screenshot crop &amp; share</string>
    <string name="screenshot_crop_and_share_summary">Show an editor window after taking a screenshot in order to do some operations like cropping, saving or sharing it</string>
</resources>