<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/quick_settings_category_title" >
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="status_bar_locked_on_secure_keyguard"
            android:title="@string/qs_block_on_secure_keyguard_title"
            android:summary="@string/qs_block_on_secure_keyguard_summary"/>
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreferenceSecure
            android:defaultValue="true"
            android:key="qs_show_brightness"
            android:title="@string/qs_brightness_title"
            android:summary="@string/qs_brightness_summary"/>
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
             android:defaultValue="false"
             android:key="quick_settings_vibrate"
             android:title="@string/quick_settings_vibrate_title"
             android:summary="@string/quick_settings_vibrate_summary"/>
         <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
             android:defaultValue="true"
             android:key="qs_tile_title_visibility"
             android:summaryOff="@string/qs_tile_title_visibility_summary_off"
             android:summaryOn="@string/qs_tile_title_visibility_summary_on"
             android:title="@string/qs_tile_title_visibility_title" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="qs_data_advanced"
            android:summary="@string/qs_advanced_data_summary"
            android:title="@string/qs_advanced_data_title" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="qs_wifi_easy_toggle"
            android:summary="@string/qs_wifi_easy_toggle_summary"
            android:title="@string/qs_wifi_easy_toggle_title" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="qs_bt_easy_toggle"
            android:summary="@string/qs_bt_easy_toggle_summary"
            android:title="@string/qs_bt_easy_toggle_title" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="true"
            android:key="qs_fancy_animation"
            android:summary="@string/qs_fancy_animation_summary"
            android:title="@string/qs_fancy_animation_title" />

        <PreferenceScreen
             android:title="@string/status_bar_expanded_qs_settings"
             android:summary="@string/qs_tile_layout_summary">

        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference
             android:defaultValue="3"
             android:key="qs_layout_columns"
             android:title="@string/qs_columns_title"
             app:maxValue="9"
             app:minValue="1"
             app:unitsValue=""/>
        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference
             android:defaultValue="3"
             android:key="qs_rows_portrait"
             android:title="@string/qs_rows_portrait_title"
             app:maxValue="7"
             app:minValue="1"
             app:unitsValue=""/>
        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference
             android:defaultValue="2"
             android:key="qs_rows_landscape"
             android:title="@string/qs_rows_landscape_title"
             app:maxValue="3"
             app:minValue="1"
             app:unitsValue=""/>
            <com.wubydax.romcontrol.v2.prefs.MySeekBarPreferenceSecure
                android:defaultValue="6"
                android:key="sysui_qqs_count"
                android:title="@string/qs_small_tiles_title"
                app:maxValue="8"
                app:minValue="3"
                app:unitsValue=""/>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notification_panel_category_title" >
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
             android:defaultValue="false"
             android:key="qs_color_switch"
             android:title="@string/quick_settings_color_title"
             android:summary="@string/quick_settings_color_summary" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
             alphaSlider="false"
             android:defaultValue="#ff212121"
             android:key="qs_background_color"
             android:title="@string/quick_settings_panel_background_title"/>
        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference
            android:defaultValue="255"
            android:key="qs_transparent_shade"
            android:title="@string/quick_settings_panel_transparency_title"
            app:maxValue="255"
            app:minValue="0"
            app:unitsValue=""/>
       <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
             android:defaultValue="true"
             android:key="BLUR"
             android:title="@string/blur_notification_panel_title" android:summary="@string/blur_notification_panel_summary"/>

        <PreferenceScreen
            android:title="@string/blur_settings_title"
            android:summary="@string/blur_settings_summary">

       <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference
             android:defaultValue="3"
             android:key="BLUR_RADIUS"
             android:title="@string/blur_radius"
             app:maxValue="24"
             app:minValue="1"
             app:unitsValue=""/>

       <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference
             android:defaultValue="165"
             android:key="BLUR_ALPHA"
             android:title="@string/blur_alpha"
             app:maxValue="200"
             app:minValue="1"
             app:unitsValue=""/>
        </PreferenceScreen>
       </PreferenceCategory>

    <PreferenceCategory android:title="@string/heads_up_category_title" >
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
             android:defaultValue="true"
             android:key="heads_up_notifications_enabled"
             android:title="@string/heads_up_switch_title"
             android:summary="@string/heads_up_switch_summary"/>
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="5000"
            android:entries="@array/heads_up_time_out_entries"
            android:entryValues="@array/heads_up_time_out_values"
            android:key="heads_up_timeout"
            android:title="@string/heads_up_time_out_title"
            android:summary="@string/heads_up_time_out_summary" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="60000"
            android:entries="@array/heads_up_snooze_entries"
            android:entryValues="@array/heads_up_snooze_values"
            android:key="heads_up_notification_snooze"
            android:title="@string/heads_up_snooze_title"
            android:summary="@string/heads_up_snooze_summary" />
    </PreferenceCategory>
</PreferenceScreen>
