<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/lockscreen_statusbar_category_title" >
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="true"
            android:key="status_bar_show_carrier"
            android:title="@string/lockscreen_carrier_label_title" android:summary="@string/lockscreen_carrier_label_summary"/>
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="0"
            android:entries="@array/status_bar_weather_font_style_entries"
            android:entryValues="@array/status_bar_weather_font_style_values"
            android:key="status_bar_carrier_font_style"
            android:title="@string/status_bar_carrier_font_style_title"/>
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="keyguard_show_clock"
            android:title="@string/lockscreen_statusbar_clock_title" android:summary="@string/lockscreen_statusbar_clock_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/lockscreen_clock_category_title" >

        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="hide_lockscreen_clock_date"
            android:title="@string/lockscreen_hide_clock_title" android:summary="@string/lockscreen_hide_clock_summary"/>
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="true"
            android:key="somc_lockscreen_use_see_through_clock"
            android:title="@string/lockscreen_use_see_through_clock_title" android:summary="@string/lockscreen_use_see_through_clock_summary"/>
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="somc_lockscreen_force_see_through_clock"
            android:title="@string/lockscreen_force_see_through_clock_title" android:summary="@string/lockscreen_force_see_through_clock_summary"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/lockscreen_aosp_clock_category" >
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="show_aosp_clock"
            android:title="@string/lockscreen_aosp_clock_title" android:summary="@string/lockscreen_aosp_clock_summary"
            app:rebootDevice="true"/>
        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference
            android:title="@string/lockclock_font_size_title"
            android:key="lockclock_font_size"
            android:defaultValue="78"
            app:minValue="50"
            app:maxValue="108"
            app:unitsValue="dp"
            android:dependency="show_aosp_clock"/>
        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference
            android:title="@string/lockdate_font_size_title"
            android:key="lockdate_font_size"
            android:defaultValue="14"
            app:minValue="1"
            app:maxValue="25"
            app:unitsValue="sp"
            android:dependency="show_aosp_clock"/>
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="0"
            android:entries="@array/lock_clock_fonts_entries"
            android:entryValues="@array/lock_clock_fonts_values"
            android:key="lock_clock_fonts"
            android:title="@string/lock_clock_font_title"
            android:dependency="show_aosp_clock"/>
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="0"
            android:entries="@array/lock_clock_fonts_entries"
            android:entryValues="@array/lock_clock_fonts_values"
            android:key="lock_date_fonts"
            android:title="@string/lock_date_font_title"
            android:dependency="show_aosp_clock"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/lockscreen_media_category" >
    <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
        android:defaultValue="true"
        android:key="lockscreen_show_album_art"
        android:title="@string/lockscreen_album_art_title" android:summary="@string/lockscreen_album_art_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/lockscreen_display_category" >

    <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
        android:defaultValue="true"
        android:key="lockscreen_charging_current"
        android:title="@string/lockscreen_charging_current_title" android:summary="@string/lockscreen_charging_current_summary"/>
    </PreferenceCategory>
</PreferenceScreen>