<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <PreferenceCategory android:title="@string/dashboard_category">
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                android:defaultValue="false"
                android:key="remove_tile_summary"
                android:title="@string/remove_tile_summaries_title"
                android:summary="@string/remove_tile_summaries_title"/>
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/settings_drawer_title">
             <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                 android:defaultValue="true"
                 android:key="show_settings_drawer"
                 android:title="@string/show_settings_drawer_title"
                 android:summaryOn="@string/show_settings_drawer_enabled"
                 android:summaryOff="@string/show_settings_drawer_disabled"/>
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/screenshot_options_category">
            <com.wubydax.romcontrol.v2.prefs.MyListPreference
                android:defaultValue="0"
                android:entries="@array/screenshot_type_entries"
                android:entryValues="@array/screenshot_type_values"
                android:key="screenshot_type"
                android:title="@string/screenshot_type_title"/>
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                android:defaultValue="false"
                android:key="screenshot_sound"
                android:title="@string/screenshot_sound_title" />
            <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference
                android:title="@string/screenshot_delay_title"
                android:key="screenshot_delay"
                android:defaultValue="1000"
                app:minValue="1000"
                app:maxValue="10000"
                app:unitsValue="ms" />
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                android:defaultValue="false"
                android:key="screenshot_crop_and_share"
                android:title="@string/screenshot_crop_and_share_title"
                android:summary="@string/screenshot_crop_and_share_summary" />
            </PreferenceCategory>


</PreferenceScreen>