<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/clock_date_category_title">
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="true"
            android:key="status_bar_clock"
            android:title="@string/clock_status_bar_show_clock_title" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="0"
            android:entries="@array/status_bar_clock_style_entries"
            android:entryValues="@array/status_bar_clock_style_values"
            android:key="statusbar_clock_style"
            app:dependentValue="1"
            android:title="@string/clock_title_enable"/>
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="0"
            android:entries="@array/entries_status_bar_am_pm"
            android:entryValues="@array/values_status_bar_am_pm"
            android:key="statusbar_clock_am_pm_style"
            app:dependentValue="1"
            android:title="@string/clock_status_bar_am_pm_title"/>
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="0"
            android:entries="@array/clock_date_display_entries"
            android:entryValues="@array/clock_date_display_values"
            android:key="statusbar_clock_date_display"
            app:dependentValue="1"
            android:title="@string/clock_date_display"
            android:summary="@string/clock_date_display_summary"/>
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="0"
            android:entries="@array/clock_date_style_entries"
            android:entryValues="@array/clock_date_style_values"
            android:key="statusbar_clock_date_style"
            app:dependentValue="1"
            android:title="@string/clock_date_style"/>
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="0"
            android:entries="@array/status_bar_date_format_entries_values"
            android:entryValues="@array/status_bar_date_format_entries_values"
            android:key="statusbar_clock_date_format"
            app:dependentValue="1"
            android:title="@string/clock_date_format"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/network_traffic_title">
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="0"
            android:entries="@array/show_network_traffic_state_entries"
            android:entryValues="@array/show_network_traffic_state_values"
            android:key="network_traffic_state"
            android:title="@string/network_traffic_show_network_traffic_state"/>
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
            android:defaultValue="#ffffffff"
            android:key="network_traffic_color"
            android:title="@string/network_traffic_color_style"/>
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="0"
            android:entries="@array/show_network_traffic_unit_entries"
            android:entryValues="@array/show_network_traffic_unit_values"
            android:key="network_traffic_unit"
            android:title="@string/network_traffic_show_network_traffic_unit"/>
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="1000"
            android:entries="@array/show_network_traffic_frequency_entries"
            android:entryValues="@array/show_network_traffic_frequency_values"
            android:key="network_traffic_period"
            android:title="@string/network_traffic_show_network_traffic_frequency"/>
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="true"
            android:key="network_traffic_hide_arrow"
            android:title="@string/network_traffic_hide_arrow" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="network_traffic_autohide"
            android:title="@string/network_traffic_autohide" />
        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference
            android:defaultValue="10"
            android:key="network_traffic_autohide_threshold"
            android:title="@string/network_traffic_autohide_threshold"
            app:maxValue="100"
            app:minValue="0"
            app:unitsValue="kB/s"/>

    </PreferenceCategory>

</PreferenceScreen>